Fix SonarQube security vulnerabilities and code quality issues